--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,8 +47,12 @@ jobs:
         chmod 600 /tmp/script-tv-access-key.pem
         mkdir -p ~/.ssh
         touch ~/.ssh/known_hosts
-        ssh-keyscan -H ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
+        ssh-keyscan -H -v ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
         echo -e "Host ec2-13-127-139-208.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+        
+    - name: Test SSH Connection
+      run: ssh -v -i /tmp/deploy-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo Hello"
+          
 
 
     - name: Deploy to EC2 instance
