--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,13 +42,13 @@ jobs:
     - name: Copy Private Key
       run: echo "${{ secrets.EC2_PRIVATE_KEY }}" > /tmp/script-tv-access-key.pem
 
-    # - name: Set Up SSH
-    #   run: |
-    #     chmod 400 /tmp/script-tv-access-key.pem
-    #     mkdir -p ~/.ssh
-    #     touch ~/.ssh/known_hosts
-    #     ssh-keyscan -H -v ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
-    #     echo -e "Host ec2-13-127-139-208.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/known_hosts
+    - name: Set Up SSH
+      run: |
+        chmod 400 /tmp/script-tv-access-key.pem
+        mkdir -p ~/.ssh
+        touch ~/.ssh/known_hosts
+        ssh-keyscan -H -v ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
+        echo -e "Host ec2-13-127-139-208.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/known_hosts
 
     # - name: Test SSH Connection
     #   run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo Hello"
@@ -62,7 +62,7 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_HOST }}  "cd myReactApp && npm install && npm run build"
  
-    - name: Start Angular Project
+    - name: Start React Project
       run: |
         ssh -o StrictHostKeyChecking=no -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_HOST }}  "cd myReactApp && npm start"
 
