--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,11 +44,21 @@ jobs:
 
     - name: Set Up SSH
       run: |
-        chmod 400 /tmp/script-tv-access-key.pem
+        chmod 600 /tmp/script-tv-access-key.pem
         mkdir -p ~/.ssh
         touch ~/.ssh/known_hosts
-        ssh-keyscan -H -v ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
-        echo -e "Host ec2-13-127-139-208.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/known_hosts
+        echo -e "Host ${{ secrets.EC2_HOST }}\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+        ssh-keyscan -t rsa ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+        cat ~/.ssh/config
+        cat ~/.ssh/known_hosts
+        cat /tmp/script-tv-access-key.pem
+        ssh -T -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}
+      # run: |
+      #   chmod 400 /tmp/script-tv-access-key.pem
+      #   mkdir -p ~/.ssh
+      #   touch ~/.ssh/known_hosts
+      #   ssh-keyscan -H -v ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
+      #   echo -e "Host ec2-13-127-139-208.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/known_hosts
 
     # - name: Test SSH Connection
     #   run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo Hello"
