--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,8 @@ jobs:
         ssh-keyscan -H -v ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
         echo -e "Host ec2-13-127-139-208.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/known_hosts
 
-    # - name: Test SSH Connection
-    #   run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo Hello"
+    - name: Test SSH Connection
+      run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo Hello"
           
     - name: Pull Repository on EC2
       run: |
