--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,10 @@ jobs:
       run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo Hello"
           
     - name: Pull Repository on EC2
-      run: |
-        ssh -o StrictHostKeyChecking=no -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_HOST }}  "cd myReactApp && git pull origin develop"
+      run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "cd myReactApp && git pull origin develop"
+
+      # run: |
+      #   ssh -o StrictHostKeyChecking=no -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_HOST }}  "cd myReactApp && git pull origin develop"
  
     - name: Install Dependencies and Build
       run: |
