--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,9 @@ name: CI/CD
 on:
   push:
     branches: develop
-  
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -15,58 +13,69 @@ jobs:
         node-version: [14.x]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run the tests and generate coverage report
-      run: npm test -- --coverage
+      - name: Run the tests and generate coverage report
+        run: npm test -- --coverage
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
 
-    - name: Build
-      run: npm run build      
+      - name: Build
+        run: npm run build
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
-    - name: Copy Private Key
-      run: echo "${{ secrets.EC2_PRIVATE_KEY }}" > /tmp/script-tv-access-key.pem
+      - name: Copy Private Key
+        run: echo "${{ secrets.EC2_PRIVATE_KEY }}" > /tmp/script-tv-access-key.pem
 
-    - name: Set Up SSH
-      run: |
-        chmod 400 /tmp/script-tv-access-key.pem
-        mkdir -p ~/.ssh
-        touch ~/.ssh/known_hosts
-        ssh-keyscan -H -v ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
-        echo -e "Host ec2-13-127-139-208.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/known_hosts
+      - name: Set Up SSH
+        run: |
+          chmod 400 /tmp/script-tv-access-key.pem
+          mkdir -p ~/.ssh
+          touch ~/.ssh/known_hosts
+          ssh-keyscan -H -v ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
+          echo -e "Host ec2-13-127-139-208.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/known_hosts
 
-    - name: Test SSH Connection
-      run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo Hello"
+      - name: Test SSH Connection
+        run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo Hello"
+
+      - name: Pull Repository on EC2
+        run: |
+          git config --global user.email "purushottam@skugal.com"
+          git config --global user.name "purushottam-skugal"
           
-    - name: Pull Repository on EC2
-      run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "cd myReactApp && git pull origin develop"
+          # Navigate to the repository directory
+          cd myReactApp
 
-      # run: |
-      #   ssh -o StrictHostKeyChecking=no -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_HOST }}  "cd myReactApp && git pull origin develop"
- 
-    - name: Install Dependencies and Build
-      run: |
-        ssh -o StrictHostKeyChecking=no -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_HOST }}  "cd myReactApp && npm install && npm run build"
- 
-    - name: Start React Project
-      run: |
-        ssh -o StrictHostKeyChecking=no -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_HOST }}  "cd myReactApp && npm start"
+          # Ensure the remote repository is set
+          git remote set-url origin https://github.com/purushottam-skugal/https://github.com/purushottam-skugal/myReactApp.git
 
-    # - name: Deploy to EC2 instance
-    #   run: |
-    #     scp -o StrictHostKeyChecking=no -i /tmp/script-tv-access-key.pem -r ./build/* ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:myReactApp
+          # Fetch the latest changes
+          git fetch origin develop
+
+          # Reset the local branch to match the remote branch
+          git reset --hard origin/develop
+
+      - name: Install Dependencies and Build
+        run: |
+          cd myReactApp
+          npm install
+          npm run build
+
+      - name: Start React Project
+        run: |
+          cd myReactApp
+          npm start
