--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
           git config --global user.name "purushottam-skugal"
           
           # Navigate to the repository directory
+          mkdir -p myReactApp
           cd myReactApp
 
           # Ensure the remote repository is set
