--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,8 +64,11 @@ jobs:
       - name: Print Current Directory
         run: pwd
 
+      - name: List Project Directory Contents
+        run: ls -al myReactApp
+
       - name: Change to Project Directory
-        run: /home/runner/work/myReactApp/myReactApp
+        run: cd /home/runner/work/myReactApp/myReactApp
 
       - name: Verify Git Repository
         run: git status
