--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,10 @@ jobs:
         run: git submodule status
 
       - name: Ensure the remote repository is set
-        run: git remote set-url origin https://github.com/purushottam-skugal/https://github.com/purushottam-skugal/myReactApp.git
+        run: |
+          git remote -v
+          git remote add origin https://github.com/purushottam-skugal/myReactApp.git
+          git remote set-url origin https://github.com/purushottam-skugal/https://github.com/purushottam-skugal/myReactApp.git
 
       - name: Fetch the latest changes
         run: git fetch origin develop
