--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,109 +1,26 @@
-name: CI/CD
-
 on:
   push:
-    branches: develop
-
+    branches: [ dev ]
+ 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run the tests and generate coverage report
-        run: npm test -- --coverage
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-
-      - name: Build
-        run: npm run build
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Copy Private Key
-        run: echo "${{ secrets.EC2_PRIVATE_KEY }}" > /tmp/script-tv-access-key.pem
-
-      - name: Set Up SSH
-        run: |
-          chmod 400 /tmp/script-tv-access-key.pem
-          mkdir -p ~/.ssh
-          touch ~/.ssh/known_hosts
-          ssh-keyscan -H -v ec2-13-127-139-208.ap-south-1.compute.amazonaws.com >> ~/.ssh/known_hosts
-          echo -e "Host ec2-13-127-139-208.ap-south-1.compute.amazonaws.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/known_hosts
-
-      - name: Test SSH Connection
-        run: ssh -v -i /tmp/script-tv-access-key.pem ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "echo Hello"
-
-      - name: Pull Repository on EC2
-        run: |
-          git config --global user.email "purushottam@skugal.com"
-          git config --global user.name "purushottam-skugal"
-
-      - name: Debugging Information
-        run: |
-          ls -al  # List all files and directories in the current location
-           pwd      # Print the current working directory
-
-      - name: Print Current Directory
-        run: pwd
-
-      - name: Change to Project Directory
-        run: cd /home/runner/work/myReactApp/myReactApp
-
-      # - name: List Project Directory Contents
-      #   run: ls -al myReactApp
-
-      # - name: Verify Git Repository
-      #   run: git status
-
-      - name: Initialize Git Repository
-        run: git init
-
-      - name: Verify Git Repository (Submodule)
-        run: git submodule status
-
-      - name: Ensure the remote repository is set
-        run: |
-          git remote -v
-          git remote add origin https://github.com/purushottam-skugal/myReactApp.git
-          git remote set-url origin https://github.com/purushottam-skugal/myReactApp.git
-
-      - name: Fetch the latest changes
-        run: git fetch origin develop
-
-      - name: Reset the local branch to match the remote branch
-        run: git reset --hard origin/develop
-
-      - name: Install Dependencies and Build
-        run: |
-          cd /home/runner/work/myReactApp/myReactApp
-          npm install
-          npm run build
-
-      - name: Start React Project
-        run: |
-          cd /home/runner/work/myReactApp/myReactApp
-          npm start
-
-
-
-
-          # https://github.com/purushottam-skugal/https://github.com/purushottam-skugal/myReactApp.git
+    - uses: actions/checkout@v2
+    - name: Use Node.js 14.x to Build
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14.x
+    - run: npm install
+    - run: CI=false npm run build
+    - name: Print Current Directory
+      run: pwd
+    - name: ssh deploy on aws ec2
+      uses: easingthemes/ssh-deploy@v2.1.4
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
+        REMOTE_HOST: ${{ secrets.EC2_HOST }}
+        REMOTE_USER: ${{ secrets.EC2_USERNAME }}
+        REMOTE_PORT: ${{ secrets.EC2_PORT }}
+        SOURCE: "build/"
+        TARGET: ${{ secrets.DEPLOY_TARGET }}
