--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,15 @@
+name: CI/CD ReactApp
+
 on:
-  push:
-    branches: [ devlop ]
+    push:
+      branches: develop
  
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js 14.x to Build
