--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,4 @@ jobs:
         REMOTE_USER: ${{ secrets.EC2_USERNAME }}
         REMOTE_PORT: ${{ secrets.EC2_PORT }}
         SOURCE: "build/"
-        TARGET: ${{ secrets.DEPLOY_TARGET }}
+        TARGET: ${{ secrets.EC2_DEPLOY_TARGET }}
