--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - run: npm install
     - run: CI=false npm run build
     - name: Debug DEPLOY_TARGET
-      run: echo "DEPLOY_TARGET is ${{ secrets.EC2_DEPLOY_TARGET }}"
+      run: echo "DEPLOY_TARGET is $EC2_DEPLOY_TARGET"
     - name: ssh deploy on aws ec2
       uses: easingthemes/ssh-deploy@v2.1.4
       env:
