--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     - run: CI=false npm run build
 
     - name: ssh deploy on aws ec2
-      uses: easingthemes/ssh-deploy@v2.1.4
+      uses: easingthemes/ssh-deploy@main
     
 
       env:
