--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI/CD React App
 on:
   push:
     branches:
-      - develop 
+      - main
 
 jobs:
   build-and-deploy:
@@ -24,6 +24,9 @@ jobs:
       - name: Build React App
         run: npm run build
 
+      - name: Create Remote Directory
+        run: ssh -i ${{ secrets.EC2_PRIVATE_KEY }} -p ${{ secrets.EC2_PORT }} ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "mkdir -p ${{ secrets.EC2_DEPLOY_TARGET }}"
+
       - name: SSH Deploy to AWS EC2
         uses: easingthemes/ssh-deploy@v2.1.4
         with:
@@ -35,58 +38,3 @@ jobs:
           REMOTE_PORT: ${{ secrets.EC2_PORT }}
           SOURCE: "build/"
           TARGET: ${{ secrets.EC2_DEPLOY_TARGET }}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# name: CI/CD ReactApp
-
-# on:
-#     push:
-#       branches: develop
- 
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         node-version: [14.x]
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Use Node.js 14.x to Build
-#       uses: actions/setup-node@v2
-#       with:
-#         node-version: 14.x
-#     - run: npm install
-#     - run: CI=false npm run build
-
-#     - name: ssh deploy on aws ec2
-#       uses: easingthemes/ssh-deploy@main
-    
-
-#       env:
-#         SSH_PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
-#         REMOTE_HOST: ${{ secrets.EC2_HOST }}
-#         REMOTE_USER: ${{ secrets.EC2_USERNAME }}
-#         REMOTE_PORT: ${{ secrets.EC2_PORT }}
-#         SOURCE: "build/"
-#         TARGET: ${{ secrets.EC2_DEPLOY_TARGET }}
