--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build
         run: |
           cd /home/runner/work/myReactApp/myReactApp
-          npm run build:prod
+          npm run build
 
   Deploy:
       needs: build
